--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   http: ^0.12.2
   geolocator: ^6.1.0
+  share: ^0.6.5+3
 
 
   # The following adds the Cupertino Icons font to your application.
